# CufeDryRun-Rust

./: .gitignore  Cargo.toml  index.html
assets/data/: sample_courses.txt
src/: app.rs  desktop.rs  lib.rs  main.rs
src/models/: course_definition.rs  course_record.rs  course_span.rs  mod.rs  ordered_weekday.rs
src/platform/: desktop.rs  mod.rs  web.rs
src/services/: course_manager.rs  mod.rs
src/services/parsers/: mod.rs  standard_course_parser.rs
src/utils/: logger.rs
src/views/: courses_view.rs  mod.rs  placeholder_view.rs  timetable_view.rs  view.rs
src/windows/: main_window.rs  mod.rs
src/windows/main_window/: desktop.rs  mod.rs  nav_bar.rs  title_bar.rs
