[package]
name = "cryn-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.43"
display-info = "0.5.7"
eframe = { version = "0.33.3", features = ["wgpu"] }
egui = "0.33.3"
regex = "1.12.3"
strum = { version = "0.27.2", features = ["derive"] }

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen-futures = "0.4.58"
web-sys = "0.3.85"
